Veraltetes Fenster gelöscht. Klasse NumberField geschrieben, welche nun in allen Windows verwendet werden kann. PlaneWindow Klasse bereits mit NumberField umgeschrieben